@@ -16,11 +16,9 @@ CONFIG_APEX_VMA=0x00200000
 CONFIG_KERNEL_LMA=0x00008000
 CONFIG_RAMDISK_LMA=0x01000000
 
-CONFIG_MEM_BANK0_START=0x00000000
-#CONFIG_MEM_BANK0_LENGTH=0x10000000
-CONFIG_MEM_BANK0_LENGTH=(32*1024*1024)
-#CONFIG_MEM_BANK1_START=0x30000000
-#CONFIG_MEM_BANK1_LENGTH=0x10000000
+CONFIG_SDRAM_BANK0=y
+CONFIG_SDRAM_BANK1=y
+CONFIG_SDRAM_BANK_LENGTH=(32*1024*1024)
 
 CONFIG_NOR_BUSWIDTH=16
 CONFIG_NOR_BANK0_START=0x50000000
