@@ -16,10 +16,8 @@ CONFIG_APEX_VMA=0x20200000
 
 CONFIG_KERNEL_LMA=0x20008000
 
-CONFIG_MEM_BANK0_START =0x20000000
-CONFIG_MEM_BANK0_LENGTH=0x10000000
-CONFIG_MEM_BANK1_START =0x30000000
-CONFIG_MEM_BANK1_LENGTH=0x10000000
+CONFIG_SDRAM_BANK0=y
+CONFIG_SDRAM_BANK1=y
 
 # LH28F320BFE, 32M (2Mx16)
 CONFIG_NOR_BUSWIDTH=16
