@@ -14,11 +14,9 @@ CONFIG_APEX_VMA=0xc0200000
 
 CONFIG_KERNEL_LMA=0xc0008000
 
-CONFIG_MEM_BANK0_START=0xc0000000
-CONFIG_MEM_BANK0_LENGTH=0x10000000
-#CONFIG_MEM_BANK1_START=0xd0000000
-#CONFIG_MEM_BANK1_LENGTH=0x10000000
-#CONFIG_MEM_CONTIGUOUS=1
+CONFIG_SDRAM_BANK0=y
+#CONFIG_SDRAM_BANK0=y
+#CONFIG_SDRAM_CONTIGUOUS=1
 
 #CONFIG_SMALL=y
 CONFIG_ALLHELP=y
